# yamlgenpp

./: .gitignore  README.md  pyproject.toml  yamlgenpp.cmake
example/: CMakeLists.txt  config.yaml  main.cpp
yamlgenpp/: generator.py  main.py  naming.py
